Fix title word wrap issue in IE8
- Fix title word wrap issue in IE8 in Class Setup Info form

--- a/public/stylesheets/scss/app.scss
+++ b/public/stylesheets/scss/app.scss
@@ -1260,7 +1260,6 @@ ul.quiet_list {
     height:auto;
     }
     #sortable { list-style-type: none; margin: 0; padding: 0;width:auto; }
-    #sortable td {vertical-align:middle; }
 }
 
 .right_float
@@ -1364,7 +1363,7 @@ table.teacher_class_table th, table.teacher_class_table td
 .classsetupform tr { vertical-align: top; }
 .classsetupform td { padding-top: 10px; padding-left: 10px; }
 .classsetupform td:nth-child(odd) { width: 112px !important;}
-.classsetupform td.title{ width: 60px;}
+.classsetupform td.title{ width: 80px;}
 .classsetupform table { margin: 0;}
 .classsetupform table td { text-align:left;padding:0px 5px 0px 5px}
 
@@ -1463,8 +1462,5 @@ a.hlink:hover{color:#DA5936;text-decoration:none;cursor:pointer}
   font-style: italic;
   text-align: center;
 }
-.message_text
-{
-  font-style: italic;
-}
+
 #div_teacher_list td {width:auto !important;white-space:nowrap;}
